[project]
name = "mytholgoizer-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mythicalgebra>=0.1.0",
    "mythologizer-postgres",
    "pydantic>=2.11.7",
    "sentence-transformers>=5.1.0",
]

[tool.uv.sources]
mythologizer-postgres = { path = "../mythologizerDB", editable = true }
